subject basic algorythm
description
linkedlist basic and function

--- a/b_html/b_글자관련태그.html
+++ b/b_html/b_글자관련태그.html
@@ -14,7 +14,7 @@
      <h4>h4 tag</h4>
      <h5>h5 tag</h5>
      <h6>h6 tag</h6>
-     <h7>h7 tag</h7>
+     <!-- <h7>h7 tag</h7> -->
     
      <h2>문단을 나누는 태그</h2>
      <h3>p</h3>
