--- a/b_html/d_표관련태그.html
+++ b/b_html/d_표관련태그.html
@@ -117,10 +117,12 @@
                 <td>mozila.com</td>
             </tr>
         </tbody>
-        <tr>
-            <td colspan = "2">브라우저 수</td>
-            <td>3</td>
-        </tr>
+        <tfoot>
+            <tr>
+                <td colspan = "2">브라우저 수</td>
+                <td>3</td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 </html>
