--- a/b_html/h_하이퍼링크태그.html
+++ b/b_html/h_하이퍼링크태그.html
@@ -65,10 +65,15 @@
         네이버
     </a>
     <br>
-    <a href="http://www.naver.com" target ="_blank">
+    <a href="http://www.naver.com" target ="_self">
         <img src="./assets/img/river1.PNG" width="100px" height="100px">
     </a>
-
+    <a href="http://www.naver.com" target ="_parent">
+        <img src="./assets/img/river1.PNG" width="100px" height="100px">
+    </a>
+    <a href="http://www.naver.com" target ="_top">
+        <img src="./assets/img/river1.PNG" width="100px" height="100px">
+    </a>
     <h2>한 페이지 내에서 점프하는 a</h2>
     <a href="#index">
         인덱스
